# kathttp3

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: android-aar.yml  android-build.yml  android.yml  native-quality.yml  native.yml
example/: Makefile  build.gradle.kts
example/src/main/: AndroidManifest.xml
example/src/main/kotlin/dev/kathttp/example/: MainActivity.kt  MainViewModel.kt
example/src/main/kotlin/dev/kathttp3/example/: MainActivity.kt  MainViewModel.kt
example/src/main/res/values/: styles.xml
include/kathttp3/: kathttp3.h
kathttp/: build.gradle.kts
kathttp/src/main/kotlin/dev/kathttp/: AndroidNetworkMonitor.kt  BearerAuthInterceptor.kt  CommonHeadersInterceptor.kt  DnsResolver.kt  HttpInterceptor.kt  HttpResponseExtensions.kt  KatHttpClient.kt  LoggingInterceptor.kt  Models.kt  RetryInterceptor.kt
kathttp/src/main/kotlin/dev/kathttp/internal/: NativeBridge.kt
kathttp/src/test/kotlin/dev/kathttp/: ModelsTest.kt
kathttp3/: build.gradle.kts  consumer-rules.pro
kathttp3/src/main/kotlin/dev/kathttp3/: AndroidNetworkMonitor.kt  BearerAuthInterceptor.kt  CloseOnceSlot.kt  CommonHeadersInterceptor.kt  DnsResolver.kt  HttpInterceptor.kt  HttpResponseExtensions.kt  KatHttp3Client.kt  LoggingInterceptor.kt  Models.kt  MultipartBody.kt  NetworkIdentityTracker.kt  OriginRequestScheduler.kt  RequestPriority.kt  RetryInterceptor.kt
kathttp3/src/main/kotlin/dev/kathttp3/internal/: NativeBridge.kt
kathttp3/src/test/kotlin/dev/kathttp3/: ModelsTest.kt
scripts/: build-android-deps.sh
src/core/: ca_bundle.h  cache.cc  cache.h  cert_verifier.cc  cert_verifier.h  cookie_jar.cc  cookie_jar.h  dns.cc  dns.h  dns_wait.h  engine.cc  engine.h  flow_control.h  handshake_race.h  header_list.cc  header_list.h  http3_session.cc  http3_session.h  kathttp.h  kathttp3.h  lazy_worker_start.h  log.h  network_change.h  precommit_failover.h  quic_client.cc  quic_client.h  redirect.cc  redirect.h  request.cc  request.h  request_body_offset.h  response.h  time_util.h  tls.cc  tls.h  udp_error.h  udp_socket.cc  udp_socket.h  url.cc  url.h  (+1 more)
src/jni/: android_cert_verifier.cc  android_cert_verifier.h  android_qlog_sink.cc  android_qlog_sink.h  jni_body_batch.h  kathttp3_jni.cc  kathttp_jni.cc
tests/core/: c_abi_header_test.c  core_tests.cc
tests/fuzz/: fuzz_request_body.cc  fuzz_url_and_headers.cc
tests/interop/: kathttp3_test_client.cc
