cmake_minimum_required(VERSION 3.22.1)
project(kathttp VERSION 0.1.0 LANGUAGES C CXX)

option(KATHTTP_BUILD_TESTS "Build host unit tests" ON)
option(KATHTTP_BUILD_JNI "Build the JNI bridge" OFF)
option(KATHTTP_SANITIZE "Enable address and undefined sanitizers" OFF)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)

if(ANDROID)
  set(KATHTTP_DEPS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/third_party/android-deps" CACHE PATH "Root containing <ABI>/include and <ABI>/lib pinned dependencies")
  if(NOT KATHTTP_DEPS_ROOT)
    message(FATAL_ERROR "Android requires -DKATHTTP_DEPS_ROOT=<prebuilt root>; see README.md")
  endif()
  add_library(ngtcp2 STATIC IMPORTED)
  set_target_properties(ngtcp2 PROPERTIES IMPORTED_LOCATION "${KATHTTP_DEPS_ROOT}/${ANDROID_ABI}/lib/libngtcp2.a")
  add_library(nghttp3 STATIC IMPORTED)
  set_target_properties(nghttp3 PROPERTIES IMPORTED_LOCATION "${KATHTTP_DEPS_ROOT}/${ANDROID_ABI}/lib/libnghttp3.a")
  add_library(ngtcp2_crypto STATIC IMPORTED)
  set_target_properties(ngtcp2_crypto PROPERTIES IMPORTED_LOCATION "${KATHTTP_DEPS_ROOT}/${ANDROID_ABI}/lib/libngtcp2_crypto_boringssl.a")
  add_library(ssl STATIC IMPORTED)
  set_target_properties(ssl PROPERTIES IMPORTED_LOCATION "${KATHTTP_DEPS_ROOT}/${ANDROID_ABI}/lib/libssl.a")
  add_library(crypto STATIC IMPORTED)
  set_target_properties(crypto PROPERTIES IMPORTED_LOCATION "${KATHTTP_DEPS_ROOT}/${ANDROID_ABI}/lib/libcrypto.a")
  set(KATHTTP_DEP_TARGETS ngtcp2 nghttp3 ngtcp2_crypto ssl crypto)
  include_directories("${KATHTTP_DEPS_ROOT}/${ANDROID_ABI}/include")
  add_compile_definitions(KATHTPP_USE_BORINGSSL)
else()
  find_package(PkgConfig REQUIRED)
  pkg_check_modules(NGTCP2 REQUIRED IMPORTED_TARGET libngtcp2)
  pkg_check_modules(NGHTTP3 REQUIRED IMPORTED_TARGET libnghttp3)
  if(KATHTTP_USE_BORINGSSL)
    pkg_check_modules(NGTCP2_CRYPTO REQUIRED IMPORTED_TARGET libngtcp2_crypto_boringssl)
    add_compile_definitions(KATHTPP_USE_BORINGSSL)
  else()
    pkg_check_modules(NGTCP2_CRYPTO REQUIRED IMPORTED_TARGET libngtcp2_crypto_ossl)
  endif()
  set(KATHTTP_DEP_TARGETS PkgConfig::NGTCP2 PkgConfig::NGHTTP3 PkgConfig::NGTCP2_CRYPTO)
endif()

set(KATHTTP_CORE_SOURCES
  src/core/cache.cc src/core/cookie_jar.cc src/core/dns.cc
  src/core/engine.cc src/core/header_list.cc src/core/http3_session.cc
  src/core/quic_client.cc src/core/redirect.cc src/core/request.cc
  src/core/tls.cc src/core/udp_socket.cc src/core/url.cc)

add_library(kathttp SHARED ${KATHTTP_CORE_SOURCES})
target_include_directories(kathttp PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_include_directories(kathttp PRIVATE src/core)
target_compile_definitions(kathttp PRIVATE KATHTTP_BUILDING_LIBRARY)
target_compile_options(kathttp PRIVATE -Wall -Wextra -Wpedantic)
target_link_libraries(kathttp PRIVATE ${KATHTTP_DEP_TARGETS})
if(NOT ANDROID)
  target_link_libraries(kathttp PRIVATE pthread)
endif()
if(ANDROID)
  target_link_libraries(kathttp PRIVATE log)
endif()
if(KATHTTP_SANITIZE AND NOT ANDROID)
  target_compile_options(kathttp PRIVATE -fsanitize=address,undefined -fno-omit-frame-pointer)
  target_link_options(kathttp PRIVATE -fsanitize=address,undefined)
endif()

if(KATHTTP_BUILD_JNI)
  target_sources(kathttp PRIVATE src/jni/kathttp_jni.cc)
  if(NOT ANDROID)
    find_package(JNI REQUIRED)
    target_include_directories(kathttp PRIVATE ${JNI_INCLUDE_DIRS})
  endif()
endif()

if(KATHTTP_BUILD_TESTS AND NOT ANDROID)
  enable_testing()
  add_executable(kathttp_core_tests tests/core/core_tests.cc
    src/core/url.cc src/core/header_list.cc src/core/redirect.cc
    src/core/cookie_jar.cc)
  target_include_directories(kathttp_core_tests PRIVATE src/core)
  target_compile_options(kathttp_core_tests PRIVATE -Wall -Wextra -Wpedantic)
  add_test(NAME kathttp_core_tests COMMAND kathttp_core_tests)
endif()
